# semantic_slam

./: run.txt
redone/: CMakeLists.txt  package.xml
redone/launch/: executer.launch  placement_execute.launch  search_execute.launch
redone/src/: executer.cpp  search_excute.cpp
redone/src/20190605/: rosplan_excute.cpp  rosplan_excute2.cpp  rosplan_excute_backup1.cpp  rosplan_excute_backup2.cpp  test.cpp
redone/src/2year_app_backup/: placement_excute.cpp
rosplan/src/rosplan/rosplan_demos/common/: 2nd_plan.pddl  2nd_problem.pddl  3th_domain_redone.pddl  3th_problem_redone.pddl  domain_anv_demo.pddl  domain_multi_drone.pddl  domain_semaintic_slam.pddl  domain_sim.pddl  domain_turtlebot_demo.pddl  domain_turtlebot_demo_ori.pddl  plan.pddl  problem.pddl  problem_strategic.pddl  strategic_plan.pddl
rosplan/src/rosplan/rosplan_demos/launch/: multi_drone.launch  semantic_slam.launch  sim.launch  simulated_actions.launch  test.launch
rosplan/src/rosplan/rosplan_demos/pddl/: domain.pddl  problem.pddl
rosplan/src/rosplan/rosplan_demos/rviz/: turtlebot.rviz
rosplan/src/rosplan/rosplan_demos/scripts/: anv_replan.bash  deleteDB.bash  replan.bash  semantic_slam_explore.bash  sim.bash  turtlebot_explore.bash  waypoints_redone (copy).txt  waypoints_redone.txt
rosplan/src/rosplan/rosplan_interface_mapping/include/rosplan_interface_mapping/: RPRoadmapServer.h
rosplan/src/rosplan/rosplan_interface_mapping/launch/: rosplan_roadmap_server_real.launch
rosplan/src/rosplan/rosplan_interface_mapping/src/: RPRoadmapServer.cpp
rosplan/src/rosplan/rosplan_interface_movebase/: CMakeLists.txt
rosplan/src/rosplan/rosplan_interface_movebase/include/rosplan_interface_movebase/: RPGotoCheckpoint.h  RPMoveBase.h  RPMoveBaseDetect.h  enterev.h  goto.h  leaveev.h  movefloor.h
rosplan/src/rosplan/rosplan_interface_movebase/src/: RPGotoCheckpoint.cpp  RPMoveBase.cpp  RPMoveBaseDetect.cpp  enterev.cpp  goto.cpp  leaveev.cpp  movefloor.cpp
rosplan/src/rosplan/rosplan_knowledge_base/common/mongoDB/journal/: j._0
rosplan/src/rosplan/rosplan_knowledge_base/src/: KnowledgeBase.cpp  KnowledgeBase.cpp.orig  KnowledgeBase_LOCAL_26299.cpp  KnowledgeComparitor.cpp
rosplan/src/rosplan/rosplan_knowledge_msgs/srv/: CreatePRM.srv
rosplan/src/rosplan/rosplan_planning_system/src/ProblemGeneration/: PDDLProblemGenerator.cpp
rosplan/src/rosplan/rosplan_sensing_interface/: example.yaml
rosplan/src/rosplan/rosplan_sensing_interface/scripts/: sensing_interface.py
semantic_slam_db_interface/: CMakeLists.txt  package.xml
semantic_slam_db_interface/config/: Boundary.txt  Connected.txt  Insideof.txt  Placename.txt  doorinfo.txt
semantic_slam_db_interface/data/: param_type_0__knowledge_type_0.xml  ses_mission_domain.pddl  ses_placement_plan.pddl  ses_placement_problem.pddl  ses_search_plan.pddl  ses_search_problem (copy).pddl  ses_search_problem.pddl
semantic_slam_db_interface/data/search/: search_goal.xml  search_init.xml  search_object.xml  ses_search.bash
semantic_slam_db_interface/launch/: db_interface.launch  ses_db_to_msg.launch
semantic_slam_db_interface/src/: Places.txt  db_interface_old_2year.cpp  sample.cpp  ses_db_interface.cpp
semantic_slam_msgs/: CMakeLists.txt  package.xml
semantic_slam_msgs/action/: elevator.action  goto_checkpoint.action
semantic_slam_msgs/msg/: door.msg  doors.msg  object.msg  objects.msg  place.msg  places.msg
semantic_slam_robot_interface/: CMakeLists.txt  package.xml
semantic_slam_robot_interface/launch/: robot_interface.launch
semantic_slam_robot_interface/src/: enter_elevator.cpp  goto.cpp  leave_elevator.cpp  move_floor.cpp  robot_interface.cpp  setAborted.cpp  setSucceeded.cpp
ses_demos/: CMakeLists.txt  package.xml
ses_demos/launch/: demo.launch
tosm_db_handler/: CMakeLists.txt  README.md  package.xml  requirements.txt
tosm_db_handler/launch/: db_update.launch  pohang.launch  redone_db_interface.launch  sample_test.launch
tosm_db_handler/scripts/: db_update.py  query_for_rosplan.py  redone_db_interface.py  sample_test.py  tosm_database_handler.py  tosm_database_sparql.py
tosm_db_handler/tosm_owl/: pohang.owl  pohang_old.owl  pohang_v4.owl  pohang_v6.owl  test.owl  tosm.owl
